--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,24 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-data
+<div class="row row-cols-md-6 g-4 mt-2">
+    {% for post in posts %}
+    <div class="card m-4" style="width: 16rem;">
+        <img src="" class="card-img-top mt-2" height="150px">
+        <div class="card-body">
+            <h3>{{post.title}}</h3>
+            <h6 class="text-muted">{{post.created_at}}</h6> 
+            <div class="row">
+                <a class="col-10 m-2 btn btn-success" href="{{url_for('post.show', id=post.id)}}">Show</a>
+                <a class="col-4 m-2 btn btn-warning" href="">Edit</a>
+                <a class="col-4 m-2 btn btn-danger" href="">Delete</a>
+            </div>
+        </div>
+    </div>
+    
+    {% endfor %}
+    
+</div>
+<div class="btn btn-outline-primary" href="{{url_for('post.create')}}">Add New Post</div>
+
 {% endblock %}
