--- a/templates/layout.html
+++ b/templates/layout.html
@@ -82,7 +82,7 @@
       class="flex-shrink-0 py-4 bg-dark text-white-50 mt-auto"
     >
       <div class="container text-center">
-        <small>Copyright &copy; Products App</small>
+        <small>Copyright &copy; Blogs App</small>
       </div>
     </footer>
     <script src="{{url_for('static', filename='bootstrap/js/bootstrap.js')}}"></script>
