add images and edit form

--- a/templates/create.html
+++ b/templates/create.html
@@ -12,9 +12,11 @@
     <label for="exampleFormControlTextarea1">Body</label>
     <textarea class="form-control" name="body" rows="3"></textarea>
   </div>
-  <div class="mb-3">
-    <label for="image" class="form-label">Image</label>
-    <input type="text" name='image' class="form-control" id="image">
+  <label for="img" class="mt-3">Image</label>
+  <div class="input-group mb-3">
+    
+    <input type="file" class="form-control" name="img">
+    <!-- <label class="input-group-text" for="img">Upload</label> -->
   </div>
   <button type="submit" class="btn btn-success mb-5">Submit</button>
 </form>
