--- a/templates/create.html
+++ b/templates/create.html
@@ -3,7 +3,7 @@
 {% block body %}
 <h3 class=" mt-5 ms-5 pt-3"> Add new Post  </h3>
 <hr class="w-50 ms-5">
-<form method="post" class="w-50 m-5">
+<form method="post" class="w-50 m-5" enctype="multipart/form-data">
   <div class="mb-3">
     <label for="" class="form-label">Title</label>
     <input type="text"  name='title' class="form-control" >
@@ -15,7 +15,7 @@
   <label for="img" class="mt-3">Image</label>
   <div class="input-group mb-3">
     
-    <input type="file" class="form-control" name="img">
+    <input type="file" class="form-control" name="image" accept="image/*">
     <!-- <label class="input-group-text" for="img">Upload</label> -->
   </div>
   <button type="submit" class="btn btn-success mb-5">Submit</button>
