--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,24 +3,21 @@
 {% block body %}
 <h3 class=" mt-5 ms-5 pt-3"> Edit Post  </h3>
 <hr class="w-50 ms-5">
-<form method="post" class="w-50 m-5">
-    {{ form.hidden_tag() }}
-    {{ form.title.label(class="form-label") }}
-
-	{{ form.title(class="form-control") }}
-	<br/>
-    {{ form.body.label(class="form-label") }}
-
-	{{ form.body(class="form-control", rows="10" , cols="3") }}
-	<br/>
-    {{ form.image.label(class="form-label") }}
-
-		{{ form.image(class="form-control") }}
-		<br/>
-		
-		
-
-		
-		{{ form.submit(class="btn btn-secondary") }}
-</form>
+<form method="post" class="w-50 m-5" enctype="multipart/form-data">
+	<div class="mb-3">
+	  <label for="" class="form-label">Title</label>
+	  <input type="text" value={{post.title}} name='title' class="form-control" >
+	</div>
+	<div class="form-group">
+	  <label for="exampleFormControlTextarea1">Body</label>
+	  <textarea class="form-control" name="body" rows="3">{{post.body}}</textarea>
+	</div>
+	<label for="img" class="mt-3">Image</label>
+	<div class="input-group mb-3">
+	  
+	  <input type="file" class="form-control" name="image" accept="image/*">
+	  <label class="input-group-text" for="img">{{post.image}}</label>
+	</div>
+	<button type="submit" class="btn btn-success mb-5">Submit</button>
+  </form>
 {% endblock %}
